# Financehub

./: .env.example  .gitignore  .sops.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial.py  0002_phase2.py
backend/app/models/: accounts.py  alerts.py  auth.py  budgets.py  categories.py  goals.py  liabilities.py  nordigen.py  snapshots.py  transactions.py
backend/app/routers/: accounts.py  alerts.py  auth.py  budgets.py  categories.py  goals.py  health.py  nordigen.py  sync.py  transactions.py
backend/app/security/: __init__.py  crypto.py  session.py
backend/app/services/: alert_service.py  budget_service.py  categorizer.py  goal_service.py  liability_service.py  nordigen_client.py  scheduler.py  snapshot_service.py  sync_service.py  token_store.py
backend/app/templates/: base.html
backend/app/templates/accounts/: list.html
backend/app/templates/alerts/: _alert_item.html  _count_badge.html  list.html
backend/app/templates/auth/: login.html  totp_setup.html
backend/app/templates/budgets/: _category_bar.html  summary.html  wizard.html
backend/app/templates/categories/: list.html  rules.html
backend/app/templates/dashboard/: index.html
backend/app/templates/goals/: _goal_card.html  _smart_nudge.html  create.html  detail.html  emergency_fund.html  list.html
routes/: web.php
(+52 files in other folders)
